# PyOpenPose

./: .gitignore  CMakeLists.txt  LICENSE  README.md
PyOpenPoseLib/: CMakeLists.txt  OpenPoseWrapper.cpp  OpenPoseWrapper.h  PyOpenPose.cpp  opencv_expose.cpp  opencv_expose.h
doc/: .docu.in.swp  CMakeLists.txt  docu.in
scripts/: JustFaceNet.py  JustHandNet.py  OpLoop.py  OpLoop_heatmaps_example.py  optest.ipynb
